--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,16 @@
     <version>0.1.0-incubating-SNAPSHOT</version>
   </parent>
 
+  <repositories>
+    <repository>
+      <id>apache-snapshots</id>
+      <url>http://repository.apache.org/snapshots</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <build>
     <extensions>
       <extension>
