--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -103,6 +103,9 @@
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>maven-jetty-plugin</artifactId>
         <version>6.1.22</version>
+        <configuration>
+          <contextPath>/cmis-server</contextPath>
+        </configuration>
       </plugin>
     </plugins>
   </build>
